Message Template apis
